<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aesean.rotate3d.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fragment_container_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#ffcccc"/>

    <FrameLayout
        android:id="@+id/fragment_container_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_3"
        app:layout_constraintLeft_toRightOf="@+id/fragment_container_0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#ccffcc"/>

    <FrameLayout
        android:id="@+id/fragment_container_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fragment_container_3"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_0"
        tools:background="#ffffcc">

        <TextView
            android:id="@+id/left_bottom_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow500"
            android:gravity="center"
            android:text="@string/view_animation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/left_bottom_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green500"
            android:gravity="center"
            android:text="@string/view_animation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_container_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fragment_container_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_1"
        tools:background="#ccffff">

        <TextView
            android:id="@+id/right_bottom_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/indigo500"
            android:gravity="center"
            android:text="@string/view_animator"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/right_bottom_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink500"
            android:gravity="center"
            android:text="@string/view_animator"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#ffffff"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
